Distributed Media Lab

--- a/index.html
+++ b/index.html
@@ -41,7 +41,23 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr id="distributedmedialab">
+                <td><a href="https://www.grantfortheweb.org/blog/dmlaward">September 15, 2020</a></td>
+                <td><a href="https://distributedmedialab.com/">Distributed Media Lab</a></td>
+                <td>Awardee</td>
+                <td>Distributed Media Lab (DML) is an open web content distribution platform.</td>
+                <td>content</td>
+                <td>
+                    <details>
+                        <summary>Details</summary>
+                        <ul>
+                            <li>New DML platform capabilities will harness Web Monetization and the AMP framework to power distributed reader revenue across a network of participating publishers. This decentralized approach will empower publishers to harness the natural scalability of the open web.</li>
+                            <li>With funding from Grant for the Web, DML is building on Web Monetization and the AMP framework with a goal to encourage broader industry adoption and development toward a more sustainable news publishing industry.</li>
+                        </ul>
+                    </details>
+                </td>
+            </tr>
+            <tr id="hacksultan">
                 <td><a href="https://www.grantfortheweb.org/blog/akintunde-sultan-bolaji">July 20, 2020</a></td>
                 <td><a href="https://devcareer.io/">Akintunde Sultan Bolaji</a></td>
                 <td>Ambassador</td>
@@ -58,7 +74,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="jessevondoom">
                 <td><a href="https://www.grantfortheweb.org/blog/jesse-von-doom">July 10, 2020</a></td>
                 <td><a href="https://jessevondoom.glitch.me/">Jesse von Doom</a></td>
                 <td>Ambassador</td>
@@ -76,7 +92,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="enclavegames">
                 <td><a href="https://www.grantfortheweb.org/blog/enclave-games">July 6, 2020</a></td>
                 <td><a href="https://enclavegames.com/">Enclave Games</a></td>
                 <td>Awardee</td>
@@ -94,7 +110,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="defold">
                 <td><a href="https://www.grantfortheweb.org/blog/defold">June 11, 2020</a></td>
                 <td><a href="https://defold.com/">Defold</a></td>
                 <td>Awardee</td>
@@ -112,7 +128,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="covidtechhandbook">
                 <td><a href="https://www.grantfortheweb.org/post/coronavirus-tech-handbook">May 21, 2020</a></td>
                 <td><a href="https://coronavirustechhandbook.com/">Coronavirus Tech Handbook</a></td>
                 <td>Awardee</td>
@@ -129,7 +145,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="devto">
                 <td><a href="https://www.grantfortheweb.org/blog/dev">May 21, 2020</a></td>
                 <td><a href="https://dev.to/">DEV</a></td>
                 <td>Awardee</td>
@@ -147,7 +163,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="hjchen crisbeasley">
                 <td><a href="https://www.grantfortheweb.org/blog/ambassadors-hj-chen-and-cris-beasley">May 21, 2020</a></td>
                 <td><a href="https://chenhuijing.com/">Hui Jing Chen</a> &amp; <a href="https://www.crisbeasley.com/">Cris Beasley</a></td>
                 <td>Ambassador</td>
@@ -163,7 +179,7 @@
                     </details>
                 </td>
             </tr>
-            <tr>
+            <tr id="freemusicarchive">
                 <td><a href="https://www.grantfortheweb.org/blog/free-music-archive">May 21, 2020</a></td>
                 <td><a href="https://freemusicarchive.org/">Free Music Archive</a></td>
                 <td>Awardee</td>
@@ -182,7 +198,7 @@
             </tr>
         </tbody>
     </table>
-    <small>* Last updated: July 20, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
+    <small>* Last updated: September 16, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
 </section>
 <footer>
     <p>Data taken from the <a href="https://www.grantfortheweb.org/blog">Grant for the Web blog</a>, compiled by <a href="https://end3r.com/">Andrzej Mazur</a>.</p>
