--- a/index.html
+++ b/index.html
@@ -41,6 +41,45 @@
             </tr>
         </thead>
         <tbody>
+            <tr id="2020spark">
+                <td><a href="https://www.grantfortheweb.org/blog/2020-spark-grantees">September 29, 2020</a></td>
+                <td>2020 Spark Grantees</td>
+                <td>Grantees</td>
+                <td>Grant for the Web announces 25 Spark level recipients from inaugural call for proposals. Projects from educational resources to tech builds to the creation of original content were included among the Spark awards, with grants ranging from $5,000 to $15,000 USD.</td>
+                <td>various</td>
+                <td>
+                    <details>
+                        <summary>Details</summary>
+                        <ul>
+                            <li>Hymn6 by Atif Ali</li>
+                            <li>Ladyspike Media by Caitlin Arcand</li>
+                            <li>Monetization for Dart by Tomás Arias</li>
+                            <li>A case study on monetizing open-access content by Arthur Attwell</li>
+                            <li>Bandi by Keith Brewster</li>
+                            <li>Nonprofit Multitenancy Logistics Software: Viability of Integrating Web Monetization by Food Rescue Alliance</li>
+                            <li>Webpage for Baking, Photography,  Pet Care, Crypto, Web Monetization awareness by Patrícia Carapinha</li>
+                            <li>Independent News Aggregator by Jason Chrysostomou</li>
+                            <li>Teddy Story by Alan Dent</li>
+                            <li>Implement Web Monetization in PeerTube by Miles DeWitt</li>
+                            <li>Power Plays Podcast by Ayden Férdeline</li>
+                            <li>The Nordly by Jonathan Gershberg</li>
+                            <li>Design Club: Reboot by Jemima Gibbons &amp; Noam Sohachevsky</li>
+                            <li>Sustainable Funding Vlogcast, Case Studies, and Online Course for Media, Educators &amp; Tech by Erica Hargreave</li>
+                            <li>Immersive Payment by Rabimba Karanjai</li>
+                            <li>A New Approach to Sharing Knowledge on Websites Enabled by Web Monetization by Benedikt Kick</li>
+                            <li>Getting started with Web Monetization &amp; Interledger by Anson Lau</li>
+                            <li>Helping Minority Content Creators Monetize on the Web by Rashon Massey</li>
+                            <li>MHz Curationist Sustainable Contributor Payment Study by MHz Foundation</li>
+                            <li>Interledger Protocol and Web Monetization Educational Series by Sam Miller</li>
+                            <li>Documento by Arup Nath</li>
+                            <li>How to Fund your Human Resistance Cell after the Apocalypse by John Rhea</li>
+                            <li>Live Streaming from Sweet Life Records by Kyle Ricketts</li>
+                            <li>Web Monetization for Independent Music by Ampled</li>
+                            <li>Turn an archive into a library by Patrick Tanguay</li>
+                        </ul>
+                    </details>
+                </td>
+            </tr>
             <tr id="distributedmedialab">
                 <td><a href="https://www.grantfortheweb.org/blog/dmlaward">September 15, 2020</a></td>
                 <td><a href="https://distributedmedialab.com/">Distributed Media Lab</a></td>
@@ -198,7 +237,7 @@
             </tr>
         </tbody>
     </table>
-    <small>* Last updated: September 16, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
+    <small>* Last updated: September 29, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
 </section>
 <footer>
     <p>Data taken from the <a href="https://www.grantfortheweb.org/blog">Grant for the Web blog</a>, compiled by <a href="https://end3r.com/">Andrzej Mazur</a>.</p>
