Mid Level Grantees 2020

--- a/index.html
+++ b/index.html
@@ -41,6 +41,55 @@
             </tr>
         </thead>
         <tbody>
+            <tr id="2020mid">
+                <td><a href="https://www.grantfortheweb.org/blog/2020-mid-grantees">October 6, 2020</a></td>
+                <td>2020 Mid Grantees</td>
+                <td>Grantees</td>
+                <td>Grant for the Web announces 35 Mid level recipients from inaugural call for proposals. Mid level grants are funded at between $15,000 and $50,000 USD. Many of the projects in this category focus on experimenting and prototyping at the platform level, building monetization tools, and conducting research into how Web Monetization can benefit specific communities.</td>
+                <td>various</td>
+                <td>
+                    <details>
+                        <summary>Details</summary>
+                        <ul>
+                            <li>Spooky by Samuel Allemang, Janet Mowat &amp; team</li>
+                            <li>Web Monetization in the Arts by Douglas Arellanes &amp; team</li>
+                            <li>HonorBox Publication Model by Juan Caballero &amp; team</li>
+                            <li>Web Monetization JS Helpers by Nestor Campos</li>
+                            <li>Project Insulate by Abhinav Chawla</li>
+                            <li>GretNet by Jon Clement &amp; team</li>
+                            <li>Tembo by Josh Senyak</li>
+                            <li>Phaser and Pixi Web Monetization Plugins and Tutorials by Richard Davey</li>
+                            <li>Harbour by Harbour</li>
+                            <li>Little Webby Press by Andre Garzia</li>
+                            <li>Discriminator by Brett Gaylor &amp; team</li>
+                            <li>Web Monetization for the Moodle Open-source learning platform by Andrew Hancox</li>
+                            <li>Streetmix by Lou Huang</li>
+                            <li>Donation Stream by Mike Huggins &amp; Luke Brobbin</li>
+                            <li>What Kind of Internet Do You Want? by Open Index Protocol</li>
+                            <li>Porium by Sonia John</li>
+                            <li>Monetizing the user-centric read-write web with Solid by Michiel de Jong</li>
+                            <li>Fuelling social justice with a monetization stream by Ushashidi</li>
+                            <li>Freemitization by Vivid IoV Labs</li>
+                            <li>Diverse income streams for musicians via Web Monetization by Audiotarky</li>
+                            <li>Gib by A* Digital</li>
+                            <li>Providing subsidized legal assistance to web monetization innovators by New Media Rights</li>
+                            <li>WMHub by Bruno Luis Panuto Silva &amp; team</li>
+                            <li>docs.plus by Edward Saperia</li>
+                            <li>Exploring the future of Web Monetization by Stephanie Rieger</li>
+                            <li>p5.js Editor by Processing Foundation</li>
+                            <li>The Chicago Genius Herald by Michael Scipioni &amp; team</li>
+                            <li>Africa Kitoko by Richard Seshie</li>
+                            <li>Web Monetization Payment Option For an Existing and Successful Multi-Publisher Local News Hub by Alex Shiffer &amp; team</li>
+                            <li>Tiki ILP Integration &amp; Monetization by Marc Laporte</li>
+                            <li>STU Arts Dance: Creative Living for Dancers by Briana Stuart &amp; team</li>
+                            <li>COMPOST by Hypha Worker Co-operative</li>
+                            <li>Waasabi by Bay Area Tech Club</li>
+                            <li>Hackathon for the Web by Ugobame Uchibeke &amp; team</li>
+                            <li>Akita by Sharon Wang &amp; Elliot Evans</li>
+                        </ul>
+                    </details>
+                </td>
+            </tr>            
             <tr id="2020spark">
                 <td><a href="https://www.grantfortheweb.org/blog/2020-spark-grantees">September 29, 2020</a></td>
                 <td>2020 Spark Grantees</td>
@@ -237,7 +286,7 @@
             </tr>
         </tbody>
     </table>
-    <small>* Last updated: September 29, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
+    <small>* Last updated: October 6, 2020. Spotted an error? Send <a href="https://github.com/end3r/GrantForTheWeb-Awardees">pull request</a>.</small>
 </section>
 <footer>
     <p>Data taken from the <a href="https://www.grantfortheweb.org/blog">Grant for the Web blog</a>, compiled by <a href="https://end3r.com/">Andrzej Mazur</a>.</p>
